--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>williams</h1>
+    <h2>new name
+    
+    </h2>
     <img width="200px" src="profile.jpg" alt="">
     <p>my profile text</p>
 </body>
