--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <h1>williams</h1>
-    <h2>new name
-    
-    </h2>
+    <h2>new name</h2>
+
     <img width="200px" src="profile.jpg" alt="">
     <p>my profile text</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis dolorem exercitationem delectus doloribus optio libero, ipsa sit reprehenderit nisi earum.</p>
 </body>
 </html>
